# todo-highlighter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  check.yml  ci-lsp.yml  code-ql.yml  test.yml  test_binaries.yml
language_server/: Cargo.toml
language_server/src/: lib.rs
language_server/src/adapters/: config.rs
language_server/src/adapters/gateways/: ripgrep.rs
language_server/src/use_cases/ports/: colorer.rs
todo_highlight/: Cargo.toml  extension.toml
todo_highlight/src/: lib.rs
